# attestation

./: .gitignore  .gitmodules  CODEOWNERS  GOVERNANCE.md  MAINTAINERS.md  Makefile  README.md  SECURITY.md  bundles.md  ci_survey.md  go.mod  go.sum  motivating_example.md  package-lock.json  package.json  schema_ideas.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: generator-generic-ossf-slsa3-publish.yml  lint.yml  make-protos.yml  python.yml  run-go-tests.yml  run_rust_tests.yml
APV0/: v0  v1
ITE/6/: README.md  ci_survey.md
docs/: README.md  background.md  examples.md  motivating_example.md  motivating_use_case.md  motivation.md  new_predicate_guidelines.md  protos.md  testing.md  validation.md
examples/go/: main.go
go/: README.md
go/example/: main.go
go/v1/: resource_descriptor.go  resource_descriptor.pb.go  resource_descriptor_test.go  statement.go  statement.pb.go  (+1 more)
governance/: 00-contributor-license-agreement.md  01-community-specification-license-v1.md  02-scope.md  03-notices.md  04-license.md  05-governance.md
images/: envelope_relationships.excalidraw  specification.excalidraw
java/: README.md
protos/: Makefile  README.md
python/: Makefile  README.md  pyproject.toml  requirements.txt
python/env/: pyvenv.cfg
python/in_toto_attestation/_internal/in_toto_attestation/predicates/link/v0/: __init__.py
python/in_toto_attestation/_internal/in_toto_attestation/predicates/provenance/v1/: __init__.py
python/in_toto_attestation/_internal/in_toto_attestation/predicates/vsa/v0/: __init__.py
python/in_toto_attestation/_internal/in_toto_attestation/predicates/vsa/v1/: __init__.py
python/in_toto_attestation/predicates/link/v0/: link_pb2.py
python/in_toto_attestation/predicates/provenance/v0/: provenance_pb2.py
python/in_toto_attestation/predicates/provenance/v0/1/: provenance_pb2.py
python/in_toto_attestation/predicates/provenance/v0/2/: provenance_pb2.py
python/in_toto_attestation/predicates/provenance/v1/: __init__.py  provenance_pb2.py
python/in_toto_attestation/predicates/reference/v0/: reference_pb2.py
python/in_toto_attestation/predicates/release/v0/: release_pb2.py
python/in_toto_attestation/predicates/release/v0/1/: release_pb2.py
python/in_toto_attestation/predicates/release/v0/2/: release_pb2.py
python/in_toto_attestation/predicates/scai/v0/: __init__.py  scai.py  scai_pb2.py
python/in_toto_attestation/predicates/svr/v0/1/: svr_pb2.py
python/in_toto_attestation/predicates/test_result/v0/: __init__.py  test_result_pb2.py
python/in_toto_attestation/predicates/vsa/v0/: __init__.py  vsa_pb2.py
python/in_toto_attestation/predicates/vsa/v1/: __init__.py  vsa_pb2.py
python/in_toto_attestation/predicates/vuln/v1/: vuln_pb2.py
python/in_toto_attestation/predicates/vulns/v0/1/: vulns_pb2.py
python/in_toto_attestation/predicates/vulns/v0/2/: vulns_pb2.py
python/in_toto_attestation/v1/: __init__.py  resource_descriptor.py  resource_descriptor_pb2.py  statement.py  statement_pb2.py
python/predicates/vsa/: vsa_pb2.py
python/predicates/vsa/v0/: vsa_pb2.py
python/tests/: test_resource_descriptor.py  test_statement.py
python/v1/: resource_descriptor_pb2.py  statement_pb2.py
python/v1/0/: resource_descriptor_pb2.py  statement_pb2.py
rust/: Cargo.toml  README.md  build.rs
rust/src/: .rustc_info.json  error.rs  hash_algorithm.rs  lib.rs  validator.rs
rust/src/predicates/: mod.rs
rust/src/predicates/link/v0/: link.rs  mod.rs
rust/src/predicates/provenance/: mod.rs
rust/src/predicates/provenance/v0_1/: provenance.rs
rust/src/predicates/provenance/v0_2/: mod.rs  provenance.rs
rust/src/predicates/provenance/v1/: provenance.rs
rust/src/predicates/reference/v0/: mod.rs  reference.rs
rust/src/predicates/release/v0/: release.rs
rust/src/predicates/release/v0_1/: release.rs
rust/src/predicates/release/v0_2/: mod.rs  release.rs
rust/src/predicates/scai/v0/: mod.rs  scai.rs
rust/src/predicates/svr/: mod.rs
rust/src/predicates/svr/v0_1/: mod.rs  svr.rs
rust/src/predicates/test_result/: mod.rs
rust/src/predicates/test_result/v0/: mod.rs  test_result.rs
rust/src/predicates/vsa/: mod.rs
rust/src/predicates/vsa/v0/: mod.rs  vsa.rs
rust/src/predicates/vsa/v1/: mod.rs  vsa.rs
rust/src/predicates/vulns/: mod.rs
rust/src/predicates/vulns/v0_1/: mod.rs  vulns.rs
rust/src/predicates/vulns/v0_2/: vulns.rs
rust/src/v1/: mod.rs  resource_descriptor.rs  statement.rs
spec/: README.md  bundle.md  bundles.md  field_types.md  link.md  versioning.md
(+152 files in other folders)
