[build-system]
requires = ["hatchling>=0.21.1"]
build-backend = "hatchling.build"

[project]
name = "in-toto-attestation"
description = "Python bindings for the in-toto Attestation Framework"
readme = "README.md"
license = "Apache-2.0"
requires-python = "~=3.7"
keywords = [
    "security",
    "software supply chain",
    "in-toto",
    "slsa"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
    "Topic :: Software Development",
]
dependencies = ["protobuf"]
dynamic = ["version"]

[project.urls]
"Bug Reports" = "https://github.com/in-toto/attestation/issues"
Homepage = "https://in-toto.io"
Source = "https://github.com/in-toto/attestation"

[tool.hatch.version]
path = "in_toto_attestation/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/in_toto_attestation",
]
