[build-system]
requires = ["hatchling>=0.21.1"]
build-backend = "hatchling.build"

[project]
name = "in-toto-attestation"
description = "Python bindings for the in-toto Attestation Framework"
readme = "README.md"
license = "Apache-2.0"
requires-python = "~=3.7"
keywords = ["security", "software supply chain", "in-toto", "slsa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
    "Topic :: Software Development",
]
dependencies = ["protobuf"]
dynamic = ["version"]

[project.urls]
"Bug Reports" = "https://github.com/in-toto/attestation/issues"
Homepage = "https://in-toto.io"
Source = "https://github.com/in-toto/attestation"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "coverage[toml]"]
lint = ["mypy", "types-protobuf", "ruff"]
dev = ["build", "in-toto-attestation[test,lint]"]

[tool.hatch.version]
path = "in_toto_attestation/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/in_toto_attestation"]

[tool.ruff.lint]
ignore = [
    # protobuf generates non-top-level imports.
    "E402",
    # protobuf generates `cond == False`.
    "E712",
    # protobuf makes extensive use of unused imports for re-exports.
    "F401",
    # protobuf makes extensive us of `globals()`.
    "F821",
]

[tool.mypy]
# Don't bother type-checking the generated files.
# TODO: Use `mypy-protobuf` for these: https://github.com/nipunn1313/mypy-protobuf
exclude = ['^.+_pb2.py$']
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
no_implicit_optional = true
