[package]
name = "in_toto_attestation"
description = "Rust bindings for generating in-toto attestations and predicates"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["in-toto Contributors"]
repository = "https://github.com/in-toto/attestation/rust"
readme = "README.md"

[dependencies]
hex = "0.4.3"
protobuf = "3.7.2"
protobuf-json-mapping = "3.7.2"
thiserror = "2.0.12"

[build-dependencies]
protobuf-codegen = "3.7.2"
protobuf = "3.7.2"
regex = "1.11.1"
